Bill Json format optimized , and swagger updated
