# swagger.yaml
@@ -1,36 +1,55 @@
-swagger: '2.0'
+swagger: "2.0"
 info:
-  description: Api Rest for CSC
-  version: 1.0.0
-  title: CSC Api Rest
-host: 192.168.20.7
-basePath: ''
+  description: "Api Rest for CSC"
+  version: "1.0.0"
+  title: "CSC Api Rest"
+host: "192.168.20.7"
+basePath: /
 schemes:
   - http
+produces:
+  - application/json
 paths:
-  '/ws/{id}':
+  /ws/{id}:
     get:
-      summary: Request the IP address of a websocket
-      description: ''
+      summary: "Request the IP address of a websocket"
+      description: ""
       parameters:
-        - name: id
+        - name: "id"
+          in: "path"
+          description: "ID of the client"
+          required: true
+          type: "integer"
+      responses:
+        200:
+          description: "websocket found"
+          schema:
+            $ref: "#/definitions/WebsocketAddress"
+        404:
+          description: "websocket not created or found"
+  /bills/{clientId}:
+    get:
+      summary: retrieve all urls bill for connected client
+      parameters:
+        - name: clientId
           in: path
           description: ID of the client
           required: true
           type: integer
-      produces:
-        - application/json
       responses:
-        '200':
-          description: websocket found
+        200:
+          description: Ok
           schema:
+            $ref: "#/definitions/BillsNotification"
+        404:
+          description: Bad request
             $ref: '#/definitions/WebsocketAddress'
         '404':
           description: websocket not created or found
-          
+
   '/ws/connect/{pseudo}/{password}':
     get:
-      summary: Request the password and the pseudo 
+      summary: Request the password and the pseudo
       description: ''
       parameters:
         - name: pseudo
@@ -38,13 +57,13 @@ paths:
           description: pseudo of client
           required: true
           type: string
-          
+
         - name : password
           in: path
           description: password
           required: true
           type: string
-          
+
       produces:
         - application/json
       responses:
@@ -54,11 +73,27 @@ paths:
             $ref: '#/definitions/WebsocketAddress'
         '404':
           description: websocket not created or found
-  
-    
+
+
 definitions:
   WebsocketAddress:
     type: object
     properties:
       uri:
         type: string
+  BillsNotification:
+    type: object
+    properties:
+      userId:
+        type: string
+      bills:
+        type: array
+        items:
+          type: object
+          properties:
+            billId:
+              type: string
+            date:
+              type: string
+            uri:
+              type: string
